--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="col-sm-4 col-sm-offset-1 no-padding">
                 <img src="images/custom/doctor-4-graehem.jpg" alt="">
-                <a href="" data-toggle="modal" data-target="#person-2" class="mask"><img src="images/ico-toggle.png" alt=""></a>
+                <a href="" data-toggle="modal" data-target="#person-4" class="mask"><img src="images/ico-toggle.png" alt=""></a>
             </div>
         </article>
         <!-- /.container -->
@@ -289,6 +289,30 @@
 </div>
 <!-- /.modal -->
 
+<!-- Modal -->
+<div class="modal fade person-modal" id="person-4">
+    <a href="" class="pclose" data-dismiss="modal"></a>
+    <div class="divtable">
+        <div class="divcell">
+            <article class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+                        <img src="images/custom/doctor-4-graehem.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+                        <h3>Dr. Graehem Sayer</h3>
+                        <p>Dr. Graehem Sayer was born and raised in New Liskeard, Ont. He completed his undergraduate studies in Biomedical Sciences at the University of Waterloo. He earned his Doctor of Optometry degree with honours from The New England College of Optometry in 2014. His optometry training included internships at the Dimock Community Health Center in Boston, MA and the Bedford Veteran Affairs Hospital in Bedford, MA, where he gained experience in ocular pathology and therapeutics. He worked closely with several ophthalmologists during his internship at Tallman Eye Associates in Lawrence, MA, gaining experience in pediatrics and specialty eye care.<br>Graehem’s professional interests include memberships with The Canadian Association of Optometrists (CAO) and the Ontario Association of Optometrists (OAO). Graehem has a special interest in the management of ocular diseases such as glaucoma, age related macular degeneration, retinal and optic nerve pathology, cataracts, and has experience in the co-management of LASIK and cataract surgery patients. He is also certified to prescribe topical and oral therapeutic agents.<br>Graehem enjoys playing sports such as curling, volleyball, and golf. He likes to stay active, enjoys the outdoors, and is very close with his family.<br>Graehem welcomes patients of all ages and is highly dedicated to providing each patient with comprehensive eye care.</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </div>
+</div>
+<!-- /.modal -->
+    
+    
 <!-- ScrollTop Button -->
 <a href="#" class="scrolltop"><i></i></a>
 
