Add Google maps key and fix broken contact links

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <p>286 Lakeshore Road East <br/>
                     Oakville, ON L6J 1J2</p>
                     <p>+1 905 339 2809</p>
-                    <p><a href="http://www.squinteyewear.com/locations">Contact</a></p>
+                    <p><a href="http://www.squinteyewear.com">Contact</a></p>
                 </address>
             </div>
             <div class="col-sm-3">
@@ -197,7 +197,7 @@
                     <p>2501 Yonge Street <br/>
                     Toronto, ON M4P 2H6</p>
                     <p>+1 416 440 2809</p>
-                    <p><a href="http://www.squinteyewear.com/locations">Contact</a></p>
+                    <p><a href="http://www.squinteyewear.com">Contact</a></p>
                 </address>
             </div>
         </article>
@@ -317,7 +317,7 @@
 <a href="#" class="scrolltop"><i></i></a>
 
 <script src="js/jquery-2.1.1.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyBjvVf3hZRixOB2jvRXsdmAfzHBz2fErgs"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.plugins.js"></script>
 <script src="js/custom.js"></script>
