--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 <a href="#" class="scrolltop"><i></i></a>
 
 <script src="js/jquery-2.1.1.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyBjvVf3hZRixOB2jvRXsdmAfzHBz2fErgs"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBjvVf3hZRixOB2jvRXsdmAfzHBz2fErgs"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.plugins.js"></script>
 <script src="js/custom.js"></script>
