Update location, image, form link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <article class="container bg-white m-center inforow">
             <div class="col-sm-4 col-sm-offset-1">
                 <h3>Our Locations<small>Come Visit Us</small></h3>
-                <p><a href="http://www.squinteyewear.com/contact-us/book-an-eye-exam">Book an Eye Exam</a></p>
+                <p><a href="https://www.squinteyewear.com/eye-exams/#12321">Book an Eye Exam</a></p>
             </div>
             <div class="col-sm-3">
                 <address>
@@ -137,15 +137,6 @@
                     <p>286 Lakeshore Road East <br/>
                     Oakville, ON L6J 1J2</p>
                     <p>+1 905 339 2809</p>
-                    <p><a href="http://www.squinteyewear.com">Contact</a></p>
-                </address>
-            </div>
-            <div class="col-sm-3">
-                <address>
-                    <h4>Toronto</h4>
-                    <p>2501 Yonge Street <br/>
-                    Toronto, ON M4P 2H6</p>
-                    <p>+1 416 440 2809</p>
                     <p><a href="http://www.squinteyewear.com">Contact</a></p>
                 </address>
             </div>
