Fix broken zoom, format pages

--- a/index.html
+++ b/index.html
@@ -1,73 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
     <title>Lakeshore Eye Care</title>
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- Chino - Responsive Multipurpose Template - v.1.1 -->
-</head>
-<body class="home">
+  </head>
+  <body class="home">
+    <!-- Preloader -->
+    <div id="preloader">
+      <div id="status">&nbsp;</div>
+    </div>
 
-<!-- Preloader -->
-<div id="preloader">
-    <div id="status">&nbsp;</div>
-</div>
-
-<!-- WRAPPER -->
-<div class="wrapper">
-
-    <!-- HEADER -->
-    <header class="header no-padding container">
+    <!-- WRAPPER -->
+    <div class="wrapper">
+      <!-- HEADER -->
+      <header class="header no-padding container">
         <div class="row">
-            <div class="col-xs-3">
-                <img src="images/custom/logo.png" class="logo"/>
+          <div class="col-xs-3">
+            <img src="images/custom/logo.png" class="logo" />
+          </div>
+          <div class="col-xs-9">
+            <!-- Social Links -->
+            <!-- <nav class="navbar mainmenu pull-right"> -->
+            <div class="social pull-right">
+              <ul>
+                <li class="facebook">
+                  <span class="fa fa-facebook-square"></span
+                  ><a href="https://www.facebook.com">Facebook</a>
+                </li>
+                /
+                <li class="twitter">
+                  <span class="fa fa-twitter"></span
+                  ><a href="https://www.twitter.com">Twitter</a>
+                </li>
+                /
+                <li class="yellow-pages">
+                  <span class="fa fa-map-marker"></span
+                  ><a href="https://www.yellowpages.com">Yellow Pages</a>
+                </li>
+              </ul>
             </div>
-            <div class="col-xs-9">
-                <!-- Social Links -->
-                <!-- <nav class="navbar mainmenu pull-right"> -->
-                <div class="social pull-right">
-                    <ul>
-                        <li class="facebook"><span class="fa fa-facebook-square"></span><a href="https://www.facebook.com">Facebook</a></li>/
-                        <li class="twitter"><span class="fa fa-twitter"></span><a href="https://www.twitter.com">Twitter</a></li>/
-                        <li class="yellow-pages"><span class="fa fa-map-marker"></span><a href="https://www.yellowpages.com">Yellow Pages</a></li>
-                    </ul>
-                </div>
-            </div>
+          </div>
         </div>
-    </header>
-    <!-- /.header -->
+      </header>
+      <!-- /.header -->
 
-    <!-- CONTENT -->
-    <div class="content container">
+      <!-- CONTENT -->
+      <div class="content container">
         <!-- CONTAINER -->
         <article class="container oneslider slider text-center">
-            <ul>
-                <li class="bg-sl-10 medium-size">
-                    <div class="divtable">
-                        <div class="divcell">
-                            <img src="images/custom/header-logo.png" class="logo">
-                            <p class="title"><b>Clearly</b> | <i>focused</i></p>
-                            <p class="subtitle">on you and your families' vision</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <a href="#" class="arrow prev"><i></i></a>
-            <a href="#" class="arrow next"><i></i></a>
+          <ul>
+            <li class="bg-sl-10 medium-size">
+              <div class="divtable">
+                <div class="divcell">
+                  <img src="images/custom/header-logo.png" class="logo" />
+                  <p class="title"><b>Clearly</b> | <i>focused</i></p>
+                  <p class="subtitle">on you and your families' vision</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <a href="#" class="arrow prev"><i></i></a>
+          <a href="#" class="arrow next"><i></i></a>
         </article>
         <!-- /.container -->
 
         <!-- CONTAINER -->
         <article class="container padding-top-big">
-            <div class="col-sm-3 col-sm-offset-1 m-center">
-                <h3>lakeshore<small>eye care</small></h3>
-            </div>
-            <div class="col-sm-7 m-center">
-                <p>Our goal is simple - to meet and exceed the needs and expectations of our patients. We do this by truly caring for the patient as a whole, and providing the best level of service possible for you and your families’ vision and eye health. Come in to see why we are "your trusted neighborhood eye care professionals".</p>
-            </div>
+          <div class="col-sm-3 col-sm-offset-1 m-center">
+            <h3>lakeshore<small>eye care</small></h3>
+          </div>
+          <div class="col-sm-7 m-center">
+            <p>
+              Our goal is simple - to meet and exceed the needs and expectations
+              of our patients. We do this by truly caring for the patient as a
+              whole, and providing the best level of service possible for you
+              and your families’ vision and eye health. Come in to see why we
+              are "your trusted neighborhood eye care professionals".
+            </p>
+          </div>
         </article>
         <!-- /.container -->
 
@@ -75,26 +93,38 @@
 
         <!-- CONTAINER -->
         <article class="container persons padding-top-big m-center inforow">
-            <div class="col-sm-4 no-padding">
-                <img src="images/custom/doctor-1-shaheen.jpg" alt="">
-                <a href="" data-toggle="modal" data-target="#person-1" class="mask"><img src="images/ico-toggle.png" alt=""></a>
+          <div class="col-sm-4 no-padding">
+            <img src="images/custom/doctor-1-shaheen.jpg" alt="" />
+            <a href="" data-toggle="modal" data-target="#person-1" class="mask"
+              ><img src="images/ico-toggle.png" alt=""
+            /></a>
+          </div>
+          <div class="col-sm-6 col-sm-offset-1 m-center">
+            <div class="divtable">
+              <div class="divcell">
+                <h3 class="dashed-left">Dr. Shaheen Gillani</h3>
+                <p>
+                  Dr. Gillani graduated from the University of Waterloo with
+                  honors, receiving numerous awards for academic and clinical
+                  excellence. Her areas of special interest include pediatrics
+                  and contact lens while also co-managing surgeries such as
+                  LASIK. She has cross border training in disease management
+                  such as glaucoma, cataracts, and retina during her years in
+                  Austin, Texas. Dr. Gillani has been in practice since 2006.
+                </p>
+              </div>
             </div>
-            <div class="col-sm-6 col-sm-offset-1 m-center">
-                <div class="divtable">
-                    <div class="divcell">
-                        <h3 class="dashed-left">Dr. Shaheen Gillani</h3>
-                        <p>Dr. Gillani graduated from the University of Waterloo with honors, receiving numerous awards for academic and clinical excellence. Her areas of special interest include pediatrics and contact lens while also co-managing surgeries such as LASIK. She has cross border training in disease management such as glaucoma, cataracts, and retina during her years in Austin, Texas. Dr. Gillani has been in practice since 2006.</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </article>
         <!-- /.container -->
 
         <!-- CONTAINER -->
         <article class="container padding-top-big">
-            <div class="col-sm-12 col-sm-offset-1 m-center">
-                <h3>Your trusted neighbourhood<small>eye care professionals</small></h3>
-            </div>
+          <div class="col-sm-12 col-sm-offset-1 m-center">
+            <h3>
+              Your trusted neighbourhood<small>eye care professionals</small>
+            </h3>
+          </div>
         </article>
         <!-- /.container -->
 
@@ -102,94 +132,121 @@
 
         <!-- CONTAINER -->
         <article class="container map">
-            <div id="map"></div>
+          <div id="map"></div>
         </article>
         <!-- /.container -->
 
         <div class="no-separator"></div>
 
         <article class="container">
-            <ul>
-                <li class="col-sm-4 col-xs-6 mix">
-                    <img src="images/custom/gallery-1.jpg" alt="">
-                </li>
-                <li class="col-sm-4 col-xs-6 mix">
-                    <img src="images/custom/gallery-2.jpg" alt="">
-                </li>
-                <li class="col-sm-4 col-xs-6 mix">
-                    <img src="images/custom/gallery-3.jpg" alt="">
-                </li>
-            </ul>
-            <!-- /.mix-list -->
+          <ul>
+            <li class="col-sm-4 col-xs-6 mix">
+              <img src="images/custom/gallery-1.jpg" alt="" />
+            </li>
+            <li class="col-sm-4 col-xs-6 mix">
+              <img src="images/custom/gallery-2.jpg" alt="" />
+            </li>
+            <li class="col-sm-4 col-xs-6 mix">
+              <img src="images/custom/gallery-3.jpg" alt="" />
+            </li>
+          </ul>
+          <!-- /.mix-list -->
         </article>
 
         <!-- <div class="no-separator"></div> -->
 
         <!-- CONTAINER -->
         <article class="container bg-white m-center inforow">
-            <div class="col-sm-4 col-sm-offset-1">
-                <h3>Our Locations<small>Come Visit Us</small></h3>
-                <p><a href="https://www.squinteyewear.com/eye-exams/#12321">Book an Eye Exam</a></p>
-            </div>
-            <div class="col-sm-3">
-                <address>
-                    <h4>Oakville</h4>
-                    <p>286 Lakeshore Road East <br/>
-                    Oakville, ON L6J 1J2</p>
-                    <p>+1 905 339 2809</p>
-                    <p><a href="http://www.squinteyewear.com">Contact</a></p>
-                </address>
-            </div>
+          <div class="col-sm-4 col-sm-offset-1">
+            <h3>Our Locations<small>Come Visit Us</small></h3>
+            <p>
+              <a href="https://www.squinteyewear.com/eye-exams/#12321"
+                >Book an Eye Exam</a
+              >
+            </p>
+          </div>
+          <div class="col-sm-3">
+            <address>
+              <h4>Oakville</h4>
+              <p>
+                286 Lakeshore Road East <br />
+                Oakville, ON L6J 1J2
+              </p>
+              <p>+1 905 339 2809</p>
+              <p><a href="http://www.squinteyewear.com">Contact</a></p>
+            </address>
+          </div>
         </article>
         <!-- /.container -->
 
         <div></div>
-
+      </div>
+      <!-- /.content -->
     </div>
-    <!-- /.content -->
-</div>
-<!-- /.wrapper -->
+    <!-- /.wrapper -->
 
-<!-- FOOTER -->
-<footer class="footer container">
-    <div class="row">
+    <!-- FOOTER -->
+    <footer class="footer container">
+      <div class="row">
         <div class="col-sm-5">
-            <p>&copy; 2020 Lakeshore Eye Care. All right reserved.</p>
+          <p>&copy; 2020 Lakeshore Eye Care. All right reserved.</p>
         </div>
-    </div>
-</footer>
-<!-- /.footer -->
+      </div>
+    </footer>
+    <!-- /.footer -->
 
-<!-- Modal -->
-<div class="modal fade person-modal" id="person-1">
-    <a href="" class="pclose" data-dismiss="modal"></a>
-    <div class="divtable">
+    <!-- Modal -->
+    <div class="modal fade person-modal" id="person-1">
+      <a href="" class="pclose" data-dismiss="modal"></a>
+      <div class="divtable">
         <div class="divcell">
-            <article class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
-                        <img src="images/custom/doctor-1-shaheen.jpg" alt="">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
-                        <h3>Dr. Shaheen Gillani</h3>
-                        <p>Dr. Shaheen Gillani graduated with Honors in 2006 from the University of Waterloo, receiving both her Bachelor degree of Science and Doctorate of Optometry. Throughout her educational career she received numerous awards including the Prize for Academic Excellence in Ocular Pharmacology, the Essilor Award, the Alcon continuing professional education award, and the Advanced Medical Optics Prize.<br><br>Dr. Gillani entered into private practice after graduation. Her areas of interest include pediatrics, contact lens, and cornea. She also co-manages in surgeries including cataract and LASIK. She spent two years living in Austin, Texas, where she had her own private practice and gained a wealth of clinical experience in eye disease management.<br><br>Now settled in the beautiful town of Oakville, Dr. Gillani enjoys many of the local activities while spending time with her husband and daughter. She is also an active member of the Ontario Association of Optometrists, the Canadian Association of Optometrists, and the Canadian Coalition of Eye Care Professionals. Dr. Gillani thoroughly enjoys getting to know her patients and their families, and looks forward to meeting new patients.</p>
-                    </div>
-                </div>
-            </article>
+          <article class="container">
+            <div class="row">
+              <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+                <img src="images/custom/doctor-1-shaheen.jpg" alt="" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+                <h3>Dr. Shaheen Gillani</h3>
+                <p>
+                  Dr. Shaheen Gillani graduated with Honors in 2006 from the
+                  University of Waterloo, receiving both her Bachelor degree of
+                  Science and Doctorate of Optometry. Throughout her educational
+                  career she received numerous awards including the Prize for
+                  Academic Excellence in Ocular Pharmacology, the Essilor Award,
+                  the Alcon continuing professional education award, and the
+                  Advanced Medical Optics Prize.<br /><br />Dr. Gillani entered
+                  into private practice after graduation. Her areas of interest
+                  include pediatrics, contact lens, and cornea. She also
+                  co-manages in surgeries including cataract and LASIK. She
+                  spent two years living in Austin, Texas, where she had her own
+                  private practice and gained a wealth of clinical experience in
+                  eye disease management.<br /><br />Now settled in the
+                  beautiful town of Oakville, Dr. Gillani enjoys many of the
+                  local activities while spending time with her husband and
+                  daughter. She is also an active member of the Ontario
+                  Association of Optometrists, the Canadian Association of
+                  Optometrists, and the Canadian Coalition of Eye Care
+                  Professionals. Dr. Gillani thoroughly enjoys getting to know
+                  her patients and their families, and looks forward to meeting
+                  new patients.
+                </p>
+              </div>
+            </div>
+          </article>
         </div>
+      </div>
     </div>
-</div>
-<!-- /.modal -->
+    <!-- /.modal -->
 
-<!-- ScrollTop Button -->
-<a href="#" class="scrolltop"><i></i></a>
+    <!-- ScrollTop Button -->
+    <a href="#" class="scrolltop"><i></i></a>
 
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBjvVf3hZRixOB2jvRXsdmAfzHBz2fErgs"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.plugins.js"></script>
-<script src="js/custom.js"></script>
-</body>
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjvVf3hZRixOB2jvRXsdmAfzHBz2fErgs"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.plugins.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
