Adjust bio, increase map zoom

--- a/index.html
+++ b/index.html
@@ -104,13 +104,27 @@
               <div class="divcell">
                 <h3 class="dashed-left">Dr. Shaheen Gillani</h3>
                 <p>
-                  Dr. Gillani graduated from the University of Waterloo with
-                  honors, receiving numerous awards for academic and clinical
-                  excellence. Her areas of special interest include pediatrics
-                  and contact lens while also co-managing surgeries such as
-                  LASIK. She has cross border training in disease management
-                  such as glaucoma, cataracts, and retina during her years in
-                  Austin, Texas. Dr. Gillani has been in practice since 2006.
+                  Dr. Shaheen Gillani graduated with Honors in 2006 from the
+                  University of Waterloo, receiving both her Bachelor degree of
+                  Science and Doctorate of Optometry. Throughout her educational
+                  career she received numerous awards including the Prize for
+                  Academic Excellence in Ocular Pharmacology, the Essilor Award,
+                  the Alcon continuing professional education award, and the
+                  Advanced Medical Optics Prize.<br /><br />Dr. Gillani entered
+                  into private practice after graduation. Her areas of interest
+                  include pediatrics, contact lens, and cornea. She also
+                  co-manages in surgeries including cataract and LASIK. She
+                  spent two years living in Austin, Texas, where she had her own
+                  private practice and gained a wealth of clinical experience in
+                  eye disease management.<br /><br />Now settled in the
+                  beautiful town of Oakville, Dr. Gillani enjoys many of the
+                  local activities while spending time with her husband and
+                  daughters. She is also an active member of the Ontario
+                  Association of Optometrists, the Canadian Association of
+                  Optometrists, and the Canadian Coalition of Eye Care
+                  Professionals. Dr. Gillani thoroughly enjoys getting to know
+                  her patients and their families, and looks forward to meeting
+                  new patients.
                 </p>
               </div>
             </div>
@@ -158,7 +172,7 @@
         <!-- CONTAINER -->
         <article class="container bg-white m-center inforow">
           <div class="col-sm-4 col-sm-offset-1">
-            <h3>Our Locations<small>Come Visit Us</small></h3>
+            <h3>Our Location<small>Come Visit Us</small></h3>
             <p>
               <a href="https://www.squinteyewear.com/eye-exams/#12321"
                 >Book an Eye Exam</a
@@ -215,9 +229,9 @@
                   Science and Doctorate of Optometry. Throughout her educational
                   career she received numerous awards including the Prize for
                   Academic Excellence in Ocular Pharmacology, the Essilor Award,
-                  the Alcon continuing professional education award, and the
+                  the Alcon continuing professional education award, and the
                   Advanced Medical Optics Prize.<br /><br />Dr. Gillani entered
-                  into private practice after graduation. Her areas of interest
+                  into private practice after graduation. Her areas of interest
                   include pediatrics, contact lens, and cornea. She also
                   co-manages in surgeries including cataract and LASIK. She
                   spent two years living in Austin, Texas, where she had her own
@@ -225,7 +239,7 @@
                   eye disease management.<br /><br />Now settled in the
                   beautiful town of Oakville, Dr. Gillani enjoys many of the
                   local activities while spending time with her husband and
-                  daughter. She is also an active member of the Ontario
+                  daughters. She is also an active member of the Ontario
                   Association of Optometrists, the Canadian Association of
                   Optometrists, and the Canadian Coalition of Eye Care
                   Professionals. Dr. Gillani thoroughly enjoys getting to know
