Map and sizing fixes

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         </article>
         <!-- /.container -->
 
-        <div class="no-separator"></div>
+        <!-- <div class="no-separator"></div> -->
 
-        <article class="container">
+        <article class="container" style="padding: 0">
           <ul>
             <li class="col-sm-4 col-xs-6 mix">
               <img src="images/custom/gallery-1.jpg" alt="" />
